[Graal] runtime/appcds/UseAppCDS.java crashes with "VM thread using lock Heap_lock (not allowed to block on)"

XMLWordPrintable

    • b07

      runtime/appcds/UseAppCDS.java crashes with
       # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/450fa0f5-8733-43f8-b866-79fe3e86d200-S299/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4b20d9bc-4b5d-4aa0-88ff-bb2fa5d8da44/runs/44472215-b4ca-4138-95b6-acf54af1ff08/workspace/open/src/hotspot/share/runtime/mutex.cpp:1390), pid=21637, tid=21657
      # fatal error: VM thread using lock Heap_lock (not allowed to block on)
      #
      # JRE version: Java(TM) SE Runtime Environment (10.0) (fastdebug build 10-internal+0-2018-01-31-2202159.ekaterina.pavlova.jdk.hs)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 10-internal+0-2018-01-31-2202159.ekaterina.pavlova.jdk.hs, interpreted mode, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, linux-amd64)
      #

      when running in Graal JIT mode with -Xcomp.

      Steps to run the test:
      > jtreg -vt -jdk:JDK_HS_fastdebug -dir:test/hotspot/jtreg
        -javaoptions:-XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -XX:+TieredCompilation -XX:+UseJVMCICompiler -Djvmci.Compiler=graal -Xcomp
        runtime/appcds/UseAppCDS.java

            Assignee:
            Calvin Cheung (Inactive)
            Reporter:
            Ekaterina Pavlova
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: