8196626: [Graal] runtime/appcds/UseAppCDS.java crashes with "VM thread using lock Heap_lock (not allowed to block on)"

Print a message and abort CDS dumping when the allocation of metaspace has failed

Reviewed-by: iklam, mseledtsov